# kafka-producer-client

./: .gitignore  README.md  pyproject.toml
src/kafka_producer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/kafka_producer_client/: __init__.py  config.py  fastapi.py  models.py  producer.py
src/kafka_producer_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/py_kafka_producer_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config.py
